# ananta

./: .commitlintrc.json  .coverage  .coverage.benchmarks-01  .coverage.cli-01  .coverage.client-surfaces-01  .coverage.core-contracts-01  .coverage.core-contracts-02  .coverage.core-contracts-03  .coverage.core-contracts-04  .coverage.e2e-01  .coverage.e2e-02  .coverage.heuristic-runtime-01  .coverage.llm-interceptor-01  .coverage.operator-tui-01  .coverage.smoke-cli-01  .coverage.worker-01  .dockerignore  .env.example  .env.template  .envrc  .flake8  .gitattributes  .gitignore  .opencode.json  .output.txt  :USERPROFILE.sshauthorized_keys  AGENTS.md  ARBEITSBERICHT_2026-02-08.md  ARBEITSBERICHT_2026-02-09.md  BOTTLENECKS_ANALYSIS.md  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.de.md  COMMERCIAL-LICENSE.en.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  Dockerfile.compose-test  Dockerfile.evolver-bridge  Dockerfile.ollama-wsl-amd  (+184 more)
.claude/: settings.local.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md  release.yml
.husky/: commit-msg
.opencode/: opencode.db-shm  opencode.db-wal
agent/: DATABASE.md  README.md  __init__.py  agentic_search_engine.py  ai_agent.py  ananta_cli.py  auth.py  backend_provider_contracts.py  benchmark_quality.py  cli_goals.py  cli_goals_mutation.py  cli_goals_planning.py  cli_goals_query.py  cli_goals_repair.py  config.py  config_defaults.py  config_defaults_env.py  context_manager.py  database.py  db_models.py  exceptions.py  governance_modes.py  health.py  hub_benchmark.py  hybrid_context_orchestration.py  hybrid_context_support.py  hybrid_orchestrator.py  hybrid_repository_scan.py  init.py  integration_guidelines.py  lifecycle.py  llm_benchmarks.py  llm_integration.py  llm_integration_lmstudio.py  llm_integration_ollama.py  llm_resilience.py  local_llm_backends.py  metrics.py  migrate_json_to_db.py  model_selection.py  (+37 more)
ananta.egg-info/: SOURCES.txt  requires.txt  top_level.txt
architecture/: ananta-hub-worker-codecompass-overview.mmd
architektur/: README.md
artifacts/: first_goal_acceptance_latest.json  first_goal_acceptance_report.json  first_goal_acceptance_report_3er_manual.json  first_goal_acceptance_report_3er_variants.json  first_goal_acceptance_report_3er_variants_once.json  first_goal_acceptance_report_after_autopilot_scope_fix.json  first_goal_acceptance_report_after_cmd_not_found_repair.json  first_goal_acceptance_report_after_final_push_rerun.json  first_goal_acceptance_report_after_fixups.json  first_goal_acceptance_report_after_parser_deploy.json  first_goal_acceptance_report_after_soft_failure_classification.json  first_goal_acceptance_report_after_submit_timeout_tune.json  first_goal_acceptance_report_fibonacci.json  first_goal_acceptance_report_for_llm_profile.json  first_goal_acceptance_report_livecheck.json  first_goal_acceptance_report_llm_policy.json  first_goal_acceptance_report_llm_profile_verify.json  first_goal_acceptance_report_llm_realcheck.json  first_goal_acceptance_report_one_run.json  first_goal_acceptance_report_post_push.json  first_goal_acceptance_report_post_push_quick.json  first_goal_acceptance_report_post_push_retryfix.json  first_goal_acceptance_report_repeatability_run1.json  first_goal_acceptance_report_repeatability_run1b.json  first_goal_acceptance_report_repeatability_run2.json  first_goal_acceptance_report_repeatability_run3.json  first_goal_acceptance_report_smoke.json  first_goal_acceptance_report_trace_correlation_smoke.json  goal_latency_diagnostics.json  goal_latency_diagnostics_fbb0.json  goal_latency_diagnostics_latest.json  goal_latency_diagnostics_livecheck.json  goal_latency_diagnostics_llm_policy.json  goal_latency_diagnostics_llm_realcheck.json  goal_latency_diagnostics_with_llm_profile.json
assets/: operator_tui_ai_snake_lurking_prediction.cast  operator_tui_ai_snake_lurking_prediction.chapters.json  operator_tui_goal_artifacts.cast  operator_tui_multisnake_chat.cast  operator_tui_multisnake_chat.chapters.json
backend/: pom.xml
ci-artifacts/: client-surface-release-gate.json  client-surface-test-gate.json
client_runtime/: __init__.py  process.py
client_surfaces/: __init__.py  layout_manifest.json
common/: __init__.py  http_client.py
config/: ananta_network_profiles.default.json  config.example.json  core_provider_boundary.json  hermes_free_model_candidates.default.json  local_llm_run.env  operator_tui_keybindings.default.json  operator_tui_visual_viewport.default.json  plan_pattern_bindings.v1.json  planning_model_profiles.default.json  planning_prompts.default.json  planning_templates.json  system_prompts.json  worker_parallelism.default.json
controller/: README.md  __init__.py  controller.py  health.py  health_endpoint.py  init.py
data/: agents.json  ananta.db  client_surface_claim_reconciliation.json  client_surface_completion_definitions.json  client_surface_merge_readiness_report.json  client_surface_post_test_cleanup_todo.json  client_surface_runtime_decisions.json  client_surface_runtime_inventory.json  client_surface_runtime_status.json  config.json  default_team_config.json  domain_runtime_inventory.json  editor_tui_contract_runtime_mapping.json  llm_log.jsonl  llm_model_benchmarks.json  llm_model_history.json  ollama_benchmark_config.json  runtime_client_architecture_decision.json  state_ownership_matrix.json  stats_history.json  task_status.json  tasks.json  terminal_log.jsonl  terminal_log_archive.jsonl  tui_frontend_api_surface_map.json  tui_frontend_parity_readiness_report.json  vscode_frontend_api_surface_map.json
data_test/: deadlock_test.json
devtools/: backfill_task_statuses.py  check_backend_coverage_thresholds.py  check_markdown_encoding.py  check_markdown_links.py  compose-lite.ps1  coverage-thresholds.backend.json  export_contract_inventories.py  export_route_inventory.py  fix_alembic_version.py  mock_lmstudio_server.py  sync_todo_stats.py  validate_codecompass_domain_discovery.py  validate_todo_schema.py
docker/: Dockerfile.agent  setup-wsl-overcommit.ps1  smoke-test.py  speedup-e2e.sh
docs/: API_AUTH.md  (+245 more)
(+6454 files in other folders)
