[project]
name = "ananta"
version = "0.1.0"
description = "AI Agent Framework"
dependencies = [
    "flask",
    "requests",
    "flask-cors",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "prometheus-client",
    "pyjwt",
    "portalocker",
    "flasgger",
    "psutil",
    "sqlmodel",
    "psycopg2-binary",
    "pyotp",
    "qrcode",
    "Pillow",
    "cryptography",
    "alembic",
    "typer",
    "shell_gpt",
    "prompt_toolkit",
    "click",
    "redis",
    "hvac",
    "tree-sitter",
    "tree-sitter-languages",
    "llama-index",
    "mistralai",
    "gitpython",
    "flask-sock",
    "simple-websocket",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "flake8",
    "mypy",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "flask_cors.*",
    "prometheus_client.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
