[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ananta"
version = "0.7.0"
description = "AI Agent Framework"
dependencies = [
    "flask",
    "requests",
    "flask-cors",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "prometheus-client",
    "pyjwt",
    "portalocker",
    "flasgger",
    "psutil",
    "sqlmodel",
    "psycopg2-binary",
    "pyotp",
    "qrcode",
    "Pillow",
    "cryptography",
    "alembic",
    "typer",
    "shell_gpt",
    "prompt_toolkit",
    "click",
    "redis",
    "hvac",
    "tree-sitter",
    "tree-sitter-languages",
    "lxml",
    "PyYAML",
    "tree_sitter_java",
    "tree_sitter_c_sharp",
    "llama-index",
    "mistralai",
    "gitpython",
    "flask-sock",
    "simple-websocket",
    "pypdf",
    "python-docx",
    "openpyxl",
    "python-pptx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "flake8",
    "mypy",
    "ruff"
]
# Optional workflow-adapter extras. The core install does NOT pull these
# in; users opt in explicitly. See docs/setup/langchain-langgraph.md.
langchain = [
    # Pinned loosely to the current 0.3.x line; LangChain splits its
    # surface into many sub-packages, we only need the core runtime
    # for the chain executor. Pull langchain-community only if a
    # community loader is actually configured in a chain descriptor.
    "langchain-core>=0.3,<0.4",
]
langgraph = [
    # LangGraph rides on top of langchain-core. Installing the langgraph
    # extra pulls the matching core in, so users do not need both.
    "langgraph>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",
]
lc-lg = [
    # Convenience: install both adapters at once. Same upper bounds as
    # the individual extras — they share the same core.
    "langchain-core>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
]

[project.scripts]
ananta = "agent.cli.main:main"

[tool.setuptools]
packages = [
    "agent",
    "agent.bootstrap",
    "agent.cli",
    "agent.common",
    "agent.llm_strategies",
    "agent.repositories",
    "agent.routes.config",
    "agent.routes.tasks",
    "agent.routes.tasks.orchestration_policy",
    "agent.sdk",
    "agent.services",
    "agent.services.evolution",
    "agent.sgpt",
    "agent.sgpt.handlers",
    "agent.sgpt.llm_functions",
    "agent.shell",
    "client_runtime",
    "client_surfaces",
    "client_surfaces.common",
    "client_surfaces.operator_tui",
    "client_surfaces.tui_runtime",
    "client_surfaces.tui_runtime.ananta_tui",
    "hub",
    "worker",
    "worker.adapters",
    "worker.cli",
    "worker.coding",
    "worker.core",
    "worker.loop",
    "worker.planning",
    "worker.repair",
    "worker.retrieval",
    "worker.runtime",
    "worker.shell",
    "worker.skills",
    "worker.skills.builtin",
]

[tool.setuptools.package-dir]
hub = "src/hub"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "psycopg2.*",
    "flask_cors.*",
    "prometheus_client.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests that validate cross-component integration behavior",
]
filterwarnings = [
    # Background planning threads use the test's in-memory SQLite session. When a test
    # ends before its planning thread finishes, the session is already closed and the
    # thread fails with an InvalidRequestError. This is a SQLite/test-isolation artifact
    # that doesn't occur in production (PostgreSQL with connection pooling).
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
